--- a/opts/50.yaml
+++ b/opts/50.yaml
@@ -5,10 +5,11 @@ print_freq: 10
 val_freq: 100
 chkpt_freq: 100
 starting_epoch: 0
-data_resample_factor: 1
+data_resample_factor: 1 
+iter_per_epoch: 20
 
 model:
-    lr: 0.0001
+    lr: 0.0005
     img_size: 256
     n_channels: 1
     loss_type: 'focal'
